# cmd/default_/api/health.go
@@ -1,20 +1,25 @@
 package api
 
 import (
+	"net/http"
 	"time"
 
 	"github.com/coreservice-io/CliAppTemplate/plugin/echoServer"
 	"github.com/labstack/echo/v4"
 )
 
-// @Summary      health check
+type MSG_RESP_HEALTH struct {
+	UnixTime int64 `json:"unixtime"`
+}
+
+// @Summary      /api/health
 // @Description  health check
 // @Tags         health
 // @Produce      json
-// @Success      200 {object} echoServer.RespBody{data=int64} "result"
+// @Success      200 {object} MSG_RESP_HEALTH "server unix time"
 // @Router       /api/health [get]
 func healthCheck(ctx echo.Context) error {
-	return echoServer.SuccessResp(ctx, 1, time.Now().Unix(), "")
+	return ctx.JSON(http.StatusOK, &MSG_RESP_HEALTH{UnixTime: time.Now().Unix()})
 }
 
 func config_health(httpServer *echoServer.EchoServer) {
