# cmd/default_/api_docs/swagger.json
@@ -28,24 +28,12 @@
                 "tags": [
                     "health"
                 ],
-                "summary": "health check",
+                "summary": "/api/health",
                 "responses": {
                     "200": {
-                        "description": "result",
+                        "description": "server unix time",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/echoServer.RespBody"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "integer"
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/api.MSG_RESP_HEALTH"
                         }
                     }
                 }
@@ -76,7 +64,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.CreateUserMsg"
+                            "$ref": "#/definitions/api.MSG_REQ_CREATE_USER"
                         }
                     }
                 ],
@@ -84,19 +72,7 @@
                     "200": {
                         "description": "result",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/echoServer.RespBody"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "result": {
-                                            "$ref": "#/definitions/userMgr.ExampleUserModel"
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/api.MSG_RESP_CREATE_USER"
                         }
                     }
                 }
@@ -130,19 +106,7 @@
                     "200": {
                         "description": "result",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/echoServer.RespBody"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "result": {
-                                            "$ref": "#/definitions/userMgr.ExampleUserModel"
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/api.MSG_RESP_GET_USER"
                         }
                     }
                 }
@@ -173,7 +137,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.UpdateUserMsg"
+                            "$ref": "#/definitions/api.MSG_REQ_UPDATE_USER"
                         }
                     }
                 ],
@@ -181,7 +145,7 @@
                     "200": {
                         "description": "result",
                         "schema": {
-                            "$ref": "#/definitions/echoServer.RespBody"
+                            "$ref": "#/definitions/api.MSG_RESP_UPDATE_USER"
                         }
                     }
                 }
@@ -189,7 +153,7 @@
         }
     },
     "definitions": {
-        "api.CreateUserMsg": {
+        "api.MSG_REQ_CREATE_USER": {
             "type": "object",
             "properties": {
                 "email": {
@@ -200,41 +164,9 @@
                 }
             }
         },
-        "api.UpdateUserMsg": {
+        "api.MSG_REQ_UPDATE_USER": {
             "type": "object",
             "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "string"
-                }
-            }
-        },
-        "echoServer.RespBody": {
-            "type": "object",
-            "properties": {
-                "msg": {
-                    "type": "string"
-                },
-                "result": {},
-                "status": {
-                    "type": "integer"
-                }
-            }
-        },
-        "userMgr.ExampleUserModel": {
-            "type": "object",
-            "properties": {
-                "created": {
-                    "type": "integer"
-                },
                 "email": {
                     "type": "string"
                 },
@@ -246,9 +178,65 @@
                 },
                 "status": {
                     "type": "string"
+                }
+            }
+        },
+        "api.MSG_RESP_CREATE_USER": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
                 },
-                "updated": {
+                "meta_message": {
+                    "type": "string"
+                },
+                "meta_status": {
                     "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.MSG_RESP_GET_USER": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "meta_message": {
+                    "type": "string"
+                },
+                "meta_status": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.MSG_RESP_HEALTH": {
+            "type": "object",
+            "properties": {
+                "unixtime": {
+                    "type": "integer"
+                }
+            }
+        },
+        "api.MSG_RESP_UPDATE_USER": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "meta_message": {
+                    "type": "string"
+                },
+                "meta_status": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         }
